Bug 1043689 - Cancel state in the GEL when processing a cancelled touch block. r=botond